force-app/main/default/src/objects/PJN_Event_Automation__c/PJN_Event_Automation__c.object-meta.xml
<CustomObject>
    <description>Object to store grouping level for Event Codes that also determines what actions should be taken for each Event.</description>
    <label>Event Automation</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Event Automation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Automation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>