force-app/main/default/src/objects/PJN_Event_Automation__c/fields/PJN_Case_Activity_Method__c.field-meta.xml
<CustomField>
    <fullName>PJN_Case_Activity_Method__c</fullName>
    <description>Global Value set from Case Activity Method.</description>
    <label>Case Activity Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PJN_Method</valueSetName>
    </valueSet>
</CustomField>