force-app/main/default/src/objects/PJN_Event_Automation__c/fields/PJN_Case_Communication_Direction__c.field-meta.xml
<CustomField>
    <fullName>PJN_Case_Communication_Direction__c</fullName>
    <description>Picklist to specify case communication direction.</description>
    <label>Case Communication Direction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>