force-app/main/default/src/objects/PJN_Event_Automation__c/fields/PJN_CM_Activity_Description__c.field-meta.xml
<CustomField>
    <fullName>PJN_CM_Activity_Description__c</fullName>
    <description>Long Area Text (32000) to match Case Description field.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CM Activity Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>