force-app/main/default/src/objects/PJN_Event_Automation__c/fields/PJN_CM_Activity_Subject__c.field-meta.xml
<CustomField>
    <fullName>PJN_CM_Activity_Subject__c</fullName>
    <description>Text(255) to match Case Subject field.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CM Activity Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>