force-app/main/default/src/objects/PJN_Event_Automation__c/fields/PJN_Create_CM_Activity__c.field-meta.xml
<CustomField>
    <fullName>PJN_Create_CM_Activity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to trigger Create CM Activity.</description>
    <label>Create CM Activity</label>
    <type>Checkbox</type>
</CustomField>