force-app/main/default/src/objects/PJN_Event_Automation__c/fields/PJN_Event_Key__c.field-meta.xml
<CustomField>
    <fullName>PJN_Event_Key__c</fullName>
    <description>Formula combining Program + SP Status + SP Sub-Status.</description>
    <formula>PJN_Program__r.PJN_Program_DeveloperName__c + &quot;-&quot; + TEXT(PJN_SP_Status__c) + &quot;-&quot; + TEXT(PJN_SP_Sub_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Key</label>
    <type>Text</type>
</CustomField>