force-app/main/default/src/objects/PJN_Event_Automation__c/fields/PJN_Mail_Creation_Job_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Mail_Creation_Job_Name__c</fullName>
    <description>Text(100) Mail Creation Job Name.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Mail Creation Job Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>