force-app/main/default/src/objects/PJN_Event_Automation__c/fields/PJN_New_CM_Status__c.field-meta.xml
<CustomField>
    <fullName>PJN_New_CM_Status__c</fullName>
    <description>Global value picklist for New CM Status.</description>
    <label>New CM Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PJN_Status</valueSetName>
    </valueSet>
</CustomField>