force-app/main/default/src/objects/PJN_Event_Automation__c/fields/PJN_New_CM_Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>PJN_New_CM_Sub_Status__c</fullName>
    <description>Global picklist New CM Sub-Status field.</description>
    <label>New CM Sub-Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>PJN_New_CM_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>PJN_Sub_Status</valueSetName>
    </valueSet>
</CustomField>