force-app/main/default/src/objects/PJN_Event_Automation__c/fields/PJN_Perform_Staleness_Check__c.field-meta.xml
<CustomField>
    <fullName>PJN_Perform_Staleness_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to Perform Staleness Check.</description>
    <label>Perform Staleness Check</label>
    <type>Checkbox</type>
</CustomField>