force-app/main/default/src/objects/PJN_Event_Automation__c/fields/PJN_Program__c.field-meta.xml
<CustomField>
    <fullName>PJN_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>CareProgram</referenceTo>
    <relationshipLabel>Event Automation</relationshipLabel>
    <relationshipName>PJN_Event_Automations</relationshipName>
    <type>Lookup</type>
</CustomField>