force-app/main/default/src/objects/PJN_Event_Automation__c/fields/PJN_SP_Status__c.field-meta.xml
<CustomField>
    <fullName>PJN_SP_Status__c</fullName>
    <description>Global value picklist status has dependency on Sub-Status.</description>
    <label>SP Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PJN_Status</valueSetName>
    </valueSet>
</CustomField>