force-app/main/default/src/objects/PJN_Event_Automation__c/fields/PJN_SP_Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>PJN_SP_Sub_Status__c</fullName>
    <description>Global value picklist field has dependency on Status.</description>
    <label>SP Sub-Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>PJN_SP_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>PJN_Sub_Status</valueSetName>
    </valueSet>
</CustomField>