force-app/main/default/src/objects/PJN_Event_Automation__c/fields/PJN_Stale_Activity_Description__c.field-meta.xml
<CustomField>
    <fullName>PJN_Stale_Activity_Description__c</fullName>
    <description>Long text Area (32000) for Stale Activity Description to match data type from Case description.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Stale Activity Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>