force-app/main/default/src/objects/PJN_Event_Automation__c/fields/PJN_Stale_Activity_Subject__c.field-meta.xml
<CustomField>
    <fullName>PJN_Stale_Activity_Subject__c</fullName>
    <description>Text(255) Stale Activity Subject to match data type from Case subject.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Stale Activity Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>