force-app/main/default/src/objects/PJN_Event_Automation__c/fields/PJN_Stale_after_Days__c.field-meta.xml
<CustomField>
    <fullName>PJN_Stale_after_Days__c</fullName>
    <description>The number of days a case can sit in this status before being considered stale.</description>
    <inlineHelpText>The number of days a case can sit in this status before being considered stale</inlineHelpText>
    <label>Stale after Days</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>