force-app/main/default/src/objects/PJN_Event_Automation__c/fields/PJN_Update_CM_Status_Values__c.field-meta.xml
<CustomField>
    <fullName>PJN_Update_CM_Status_Values__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to Update CM Status Values.</description>
    <label>Update CM Status Values</label>
    <type>Checkbox</type>
</CustomField>