force-app/main/default/src/objects/PJN_Event_Automation__c/recordTypes/PJN_Event.recordType-meta.xml
<RecordType>
    <fullName>PJN_Event</fullName>
    <active>true</active>
    <description>Event Record Type for Event Automation</description>
    <label>Event</label>
</RecordType>